--- a/css/business-casual.css
+++ b/css/business-casual.css
@@ -84,6 +84,14 @@ hr {
     background: #fff;
     background: rgba(255,255,255,0.9);
 }
+#tekst {
+	background-color: #00B8F5;
+    border: dashed 2px;
+    border-width: 5px;
+	display: block;
+	margin: 0 auto;
+	width: 700px;
+}
 
 .intro-text {
     text-transform: uppercase;
